# TopasOpt

./: .buildinfo  .gitignore  ApertureOptimisation.html  DeveloperNotes.html  DevelopmentExample.html  EnvironmentSetup.html  LICENSE.md  NoisyOptimisation.html  PaperOutline.md  PhaseSpaceOptimisation.html  README.md  code_docs.html  designing_objective_functions.html  dev_requirements.txt  genindex.html  index.html  matlab_docs.html  next_steps.html  notes_on_docs.html  objects.inv  py-modindex.html  pyproject.toml  python_docs.html  search.html  searchindex.js  setup.cfg  setup.py  worked_examples.html  xxx_setup.py
.github/workflows/: build-docs.yml  python-publish.yml  run_tests.yml
TopasBayesOpt/: CreateRunTopasScript.py  GenerateTopasScripts.py  TopasBayesOpt.py  WaterTankAnalyser.py  __init__.py  suppport_classes.py  utilities.py
TopasOpt/: GenerateTopasScriptGenerator.py  Optimisers.py  TopasOpt.py  TopasScriptGenerator.py  WaterTankAnalyser.py  __init__.py  utilities.py
_sources/: EnvironmentSetup.md.txt  convergence_criteria.md.txt  designing_objective_functions.md.txt
docs/: .buildinfo  AddingNewOptimisers.html  AperttureOptimisation.html  ApertureOptimisation.html  DeveloperNotes.html  DevelopmentExample.html  EnvironmentSetup.html  PackagingInstructions.html  PhaseSpaceOptimisation.html  TestingFramework.html  code_docs.html  convergence_criteria.html  designing_objective_functions.html  genindex.html  index.html  matlab_docs.html  next_steps.html  notes_on_docs.html  objects.inv  py-modindex.html  python_docs.html  search.html  searchindex.js  worked_examples.html
docs/_sources/: AddingNewOptimisers.md.txt  ApertureOptimisation.md.txt  DeveloperNotes.md.txt  DevelopmentExample.md.txt  PackagingInstructions.md.txt  PhaseSpaceOptimisation.md.txt  code_docs.rst.txt  index.rst.txt  next_steps.md.txt  notes_on_docs.md.txt  worked_examples.rst.txt
docs/doctrees/: ApertureOptimisation.doctree  DeveloperNotes.doctree  DevelopmentExample.doctree  EnvironmentSetup.doctree  PackagingInstructions.doctree  PhaseSpaceOptimisation.doctree  code_docs.doctree  designing_objective_functions.doctree  environment.pickle  index.doctree  next_steps.doctree  notes_on_docs.doctree  worked_examples.doctree
docsrc/: ApertureOptimisation.md  DeveloperNotes.md  DevelopmentExample.md  EnvironmentSetup.md  Makefile  PackagingInstructions.md  PhaseSpaceOptimisation.md  TestingFramework.md  code_docs.rst  colour_theme.py  conf.py  designing_objective_functions.md  good_opt_bad_opt.md  index.rst  next_steps.md  python_docs.rst  python_env_setup.md  worked_examples.rst
docsrc/_resources/: Sketch.pptx
docsrc/theme_templates/: theme-dark.css  theme-light.css
doctrees/: AddingNewOptimisers.doctree  ApertureOptimisation.doctree  DeveloperNotes.doctree  DevelopmentExample.doctree  EnvironmentSetup.doctree  NoisyOptimisation.doctree  PhaseSpaceOptimisation.doctree  TestingFramework.doctree  code_docs.doctree  convergence_criteria.doctree  environment.pickle  good_opt_bad_opt.doctree  index.doctree  next_steps.doctree  worked_examples.doctree
examples/ApertureOptimisation/: ApertureOptimisation_main.py  CompareResults.py  GeneratePythonScript_temp.py  GenerateTopasScript.py  GenerateTopasScripts.py  README.md  TopasObjectiveFunction.py  temp_LookAtOriginalResults.py  test_script0.tps  test_script1.tps
examples/DevelopmentExample/: DevelopmentExample_main.py  GenerateTopasScripts.py  README.md  TopasObjectiveFunction.py
examples/NoisyOptimisation/: CompareResults.py  GenerateTopasScripts.py  README.md  README_new.md  TopasObjectiveFunction.py  _1_generate_identical_sims_main.py  _2_compare_results.py  _2_quantify_noise.py  _3_fit_GP_models.py  (+9 more)
html/: .buildinfo  ApertureOptimisation.html  DeveloperNotes.html  DevelopmentExample.html  EnvironmentSetup.html  NoisyOptimisation.html  PhaseSpaceOptimisation.html  code_docs.html  genindex.html  good_opt_bad_opt.html  index.html  next_steps.html  objects.inv  py-modindex.html  search.html  searchindex.js  worked_examples.html
python/: my_module.py
tests/: GenerateTopasScripts.py  TopasObjectiveFunction.py  test_TopasScriptGenerator.py  test_docstring_coverage.py  test_optimisers.py  test_utilities.py
(+31 files in other folders)
