[metadata]
name = TopasOpt
version = 0.1
author = Brendan Whelan
author_email = bwheelz360@gmail.com
description = Inverse optimisation for topas Monte Carlo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ACRF-Image-X-Institute/TopasOpt
project_urls =
    Bug Tracker = https://github.com/ACRF-Image-X-Institute/TopasOpt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = find:.TopasOpt
python_requires = >=3.8

[options.packages.find]
where = .
