[metadata]
name = TopasOpt
# version = 0.1.3
author = Brendan Whelan
author_email = bwheelz360@gmail.com
license_files = LICENSE.md
version = attr: TopasOpt.__version__
description = optimisation for topas Monte Carlo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ACRF-Image-X-Institute/TopasOpt
project_urls =
    Bug Tracker = https://github.com/ACRF-Image-X-Institute/TopasOpt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = .
packages = TopasOpt
python_requires = >=3.8
install_requires =
    numpy >= 1.9.0
    scipy < 1.8.0
    scikit-learn >= 0.18.0
    bayesian-optimization
    matplotlib
    jsonpickle
    topas2numpy


